kubernetes-manifests-infra/prometheus/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.k8s.freedom.org
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
